# cr-rs

./: README.md
.github/workflows/: README.md  crud-rust-bultr.yaml  main.yaml  prd.yaml
front/: .eslintrc.json  package.json
front/layouts/: footer.tsx  header.tsx  layout.tsx
front/pages/: _app.tsx
front/pages/posts/: index.tsx  new.tsx
front/styles/: globals.css
frontbs/components/: loading.tsx
frontbs/pages/: index.tsx
frontbs/pages/api/: http.ts
frontbs/pages/posts/[id]/: edit.tsx  index.tsx
infra/: docker-compose.yml
infra/postgresql/: create_db.sql
server/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  entrypoint.sh
server/migrations/2022-08-23-110827_create_post_table/: up.sql
server/src/: lib.rs  main.rs  schema.rs
server/src/api/: post.rs
server/src/domains/: post.rs
server/src/infrastructures/database/: mod.rs  postgres.rs  schema.rs
server/src/infrastructures/repository/: post.rs
server/src/usecases/: post.rs
terraform/: main.tf  variables.tf
