[package]
name = "crud-rust"
version = "0.1.0"
authors = ["Dongri Jin <dongrify@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "=0.7.1"

# actix
actix-web = "3"
actix-cors = "0.5.4"

# json
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.66"

# DB
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
thiserror = "1.0.31"

# Other
[dependencies.uuid]
version = "1.1.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
